Fixed an improperly named file and right aligned the navigation links.

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ body {
   width: 70%;
   vertical-align: middle;
   display: table-cell;
+  text-align: right;
 }
 
 .introdution {
